force-app/main/default/objects/Retail_Performance_Tracker__c/Retail_Performance_Tracker__c.object-meta.xml
<CustomObject>
    <label>Retail Performance Tracker</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Tracker Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Performance Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>