force-app/main/default/objects/Retail_Performance_Tracker__c/fields/Add_Employee__c.field-meta.xml
<CustomField>
    <fullName>Add_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Employee</label>
    <referenceTo>Retail_Employee__c</referenceTo>
    <relationshipLabel>Retail Performance Tracker</relationshipLabel>
    <relationshipName>Retail_Performance_Tracker2</relationshipName>
    <type>Lookup</type>
</CustomField>