force-app/main/default/objects/Retail_Performance_Tracker__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Retail_Employee__c</referenceTo>
    <relationshipLabel>Retail Performance Tracker (Manager)</relationshipLabel>
    <relationshipName>Retail_Performance_Tracker3</relationshipName>
    <type>Lookup</type>
</CustomField>