force-app/main/default/objects/Retail_Performance_Tracker__c/fields/Monthly_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Achievement__c</fullName>
    <label>Monthly Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>