force-app/main/default/objects/Retail_Performance_Tracker__c/fields/Monthly_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Target__c</fullName>
    <label>Monthly Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>