force-app/main/default/objects/Retail_Performance_Tracker__c/fields/Week_1_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Week_1_Achievement__c</fullName>
    <label>Week 1 Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>