force-app/main/default/objects/Retail_Performance_Tracker__c/fields/Week_2_Target__c.field-meta.xml
<CustomField>
    <fullName>Week_2_Target__c</fullName>
    <label>Week 2 Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>