force-app/main/default/objects/Retail_Performance_Tracker__c/fields/Week_5_Acheivement__c.field-meta.xml
<CustomField>
    <fullName>Week_5_Acheivement__c</fullName>
    <label>Week 5 Acheivement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>